# Resume-Designer

./: .gitignore  .release-please-manifest.json  README.md  release-please-config.json
.claude/: launch.json
.github/workflows/: ci.yml  deploy-pages.yml  guard-main-source.yml  release.yml
docs/superpowers/plans/: 2026-06-09-shadcn-chrome-redesign.md  2026-06-10-openrouter-streaming-transparency.md  2026-06-11-disk-storage.md  2026-06-12-ui-polish-pass.md  2026-06-14-document-model-phase-0-spikes.md  2026-06-14-document-model-phase-1.md  2026-06-14-document-model-phase-2-pr1-schema.md  2026-06-14-document-model-phase-2-pr2-truth-flip.md  2026-06-14-document-model-phase-2-pr3-marks-tags.md  2026-06-14-document-model-phase-3-pr1-pagesize.md  2026-06-14-document-model-phase-3-pr2-typst-generator.md  2026-06-14-document-model-phase-3-pr3-sidebar-classic.md  2026-06-14-document-model-phase-3-pr4-rust-compile.md  2026-06-14-document-model-phase-3-pr5-export-screen.md  2026-06-14-document-model-phase-3-pr6-easy-layouts.md  2026-06-14-document-model-phase-3-pr7-medium-layouts.md  2026-06-14-document-model-phase-3-pr8-hard-layouts.md  2026-06-14-document-model-phase-3-pr9-retire-capture.md  2026-06-15-document-model-codex-fixes.md  2026-06-15-page-setup-and-on-screen-pagination.md  2026-06-27-per-resume-chat-threads.md  2026-07-01-changelog.md
docs/superpowers/specs/: 2026-06-09-shadcn-chrome-redesign-design.md  2026-06-10-openrouter-streaming-transparency-design.md  2026-06-14-document-model-phase-2-design.md  2026-06-14-document-model-phase-3-typst-export-design.md  2026-06-14-phase-0-findings.md  2026-06-14-structured-document-model-design.md  2026-06-15-page-setup-and-on-screen-pagination-design.md  2026-06-16-pdf-preview-during-export-design.md  2026-06-27-per-resume-chat-threads-design.md  2026-07-01-changelog-design.md
resume-designer/: .gitignore  ELECTRON.md  TAURI.md  commitlint.config.js  components.json  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  preview-shadcn.html  print.html  tailwind.config.js  vite.config.js  vitest.config.js
resume-designer/electron/: main.cjs
resume-designer/scripts/: migrate-from-electron.mjs
resume-designer/scripts/ci/: compute-version.mjs
resume-designer/src/: App.jsx  accentService.js  aiService.js  aiStream.js  appStorage.js  backupFlow.js  changelogService.js  chatPanel.js  chatThreads.js  diffView.js  documentModel.js  fontService.js  headerBar.js  headerStyleService.js  historyPanel.js  htmlEscape.js  inlineChanges.js  inlineEditor.js  inlineMarkdown.js  jobDescriptionPanel.js  jobDescriptions.js  jobRecommendations.js  main.js  main.jsx  markdownMessage.js  menuPortal.js  migrateToModel.js  native.js  onboarding.js  onboardingLogic.js  pageSetup.js  pagination.js  pdf.js  pdfPreview.js  persistence.js  photoService.js  printEntry.js  profileMarkdown.js  renderer.js  resumeParser.js  (+14 more)
resume-designer/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
resume-designer/src-tauri/capabilities/: default.json
resume-designer/src-tauri/fonts/: NOTICE.md
resume-designer/src-tauri/icons/: icon.icns
resume-designer/src-tauri/src/: lib.rs  main.rs
resume-designer/src-tauri/src/commands/: migration.rs  mod.rs  pdf_macos.rs  pdf_merge.rs  pdf_windows.rs  storage.rs  typst_compile.rs  updater.rs
resume-designer/src/components/: ChangelogHistory.jsx  DiffDialog.jsx  Header.jsx  HistoryDialog.jsx  PdfDialog.jsx  SettingsDialog.jsx  Sortable.jsx  TypstExportDialog.jsx
resume-designer/src/components/chat/: ChatComposer.jsx  ChatPanel.jsx  Citations.jsx  DeleteVariantThreadsDialog.jsx  LiveReasoning.jsx  Markdown.jsx  MessageList.jsx  ModelSelector.jsx  RunMeta.jsx  ThreadSelector.jsx  streamReconcile.js  streamReveal.js  useChat.js
resume-designer/src/components/jobs/: AnalysisResults.jsx  JobCard.jsx  JobEditDialog.jsx  JobSelectionDialog.jsx  JobsDialog.jsx  TailorDialog.jsx
resume-designer/src/components/onboarding/: OnboardingSteps.jsx  OnboardingWizard.jsx
resume-designer/src/components/profile/: ProfileDialog.jsx  ProfileTabs.jsx
resume-designer/src/components/structure/: DesignTab.jsx  PanelSection.jsx  StructurePanel.jsx
resume-designer/src/components/ui/: SafeMarkdown.jsx  alert-dialog.jsx  confirm.jsx  dialog.jsx  dropdown-menu.jsx  (+7 more)
resume-designer/src/dev/: shadcnPreview.jsx
resume-designer/src/hooks/: useResumeStore.js  useSettings.js  useUpdateBusy.js  useVariants.js
resume-designer/src/lib/: utils.js
resume-designer/src/shell/: appShell.html
resume-designer/src/typst/: escape.js  generate.js  palettes.js  theme.js
resume-designer/styles/: chat.css  editor.css  glass.css  main.css  onboarding.css  print.css  resume.css  shadcn.css
resume-designer/test/: aiStream.test.js  appStorage.test.js  backupKeys.test.js  changelogService.test.js  chatThreads.test.js  documentModel.test.js  experienceSort.test.js  htmlEscape.test.js  importBackup.test.js  inlineEditor.test.js  inlineMarkdown.test.js  markdownMessage.test.js  migrateToModel.test.js  onboardingSaveQuota.test.js  pageSetup.test.js  pagination.test.js  persistence.test.js  revealStep.test.js  storageGuards.test.js  store.test.js  streamReconcile.test.js  typstAtsOrder.test.js  typstEscape.test.js  typstExport.test.js  typstGenerate.test.js  typstPalettes.test.js  typstTheme.test.js  uiState.test.js  variantSaveQuota.test.js
resume-designer/test/__snapshots__/: typstGenerate.test.js.snap
website/: index.html
