[package]
name = "resume-designer"
version = "1.0.0"
description = "Creative resume designer and generator."
authors = ["Ash Shah"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "resume_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# `macos-private-api` is REQUIRED for `transparent: true` to take effect on
# macOS (it's gated behind this Cargo feature AND `app.macOSPrivateApi` in
# tauri.conf.json — both are needed, and neither warns if missing). It unlocks
# the NSVisualEffect vibrancy used by `windowEffects` for the glassy look.
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
thiserror = "1"
# Used by the one-time legacy-Electron migrator (commands/migration.rs).
# Pure-Rust LevelDB reader so we don't drag in a C++ build toolchain across
# all three target platforms. The `fs` feature is REQUIRED, not optional:
# without it, rusty-leveldb's default Options::env is an in-memory env
# rather than `PosixDiskEnv`, so DB::open silently can't see any real
# files (CURRENT, MANIFEST, .ldb) and fails with "database does not exist"
# even when the directory is right there. `dirs` resolves $HOME / $APPDATA /
# $XDG_CONFIG_HOME for Electron userData path lookup.
rusty-leveldb = "3"
dirs = "5"

[dev-dependencies]
# Isolated temp dirs for the storage-command filesystem tests. Already in the
# dependency tree transitively (Cargo.lock pins 3.27), so this adds nothing.
tempfile = "3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
# Compare the beta and stable manifest versions for the beta channel's
# superset update check (commands/updater.rs).
semver = "1"
typst-as-lib = { version = "0.15.5", features = ["typst-kit-fonts"] }
typst-pdf = "0.14.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Versions pinned to match what Tauri 2.11 / wry 0.55 pull in transitively, so
# the dep tree contains a single copy of each crate. See `cargo tree -d` to
# verify there are no duplicates.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSString", "NSGeometry"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2", "objc2-app-kit"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
# windows 0.61 matches the transitive version webview2-com 0.38 pulls in;
# pinning here keeps Interface/cast/HSTRING types from the SAME crate version
# so type-resolution works for WebView2's COM cast chain.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
